Fix missing rem unit from letter spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -378,7 +378,7 @@ footer {
     }
 
     #title-box {
-        letter-spacing: 0.1;
+        letter-spacing: 0.1rem;
         font-size: 1.2rem;
         margin-top: 1rem;
         margin-bottom: 1rem;
